--- a/hbd/xixi.html
+++ b/hbd/xixi.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="candle-count-display">
-      HAPPY BIRTHDAY XIXI!
+      HAPPY BIRTHDAY JANE!
     </div>
     <div class="cake">
       <div id="candleCount" style="display:none;"></div>
